app/_scss/_postb146.scss
.post-header-title {
  display: inline-block;
  padding: 0;
  padding-left: 2rem;
  height: 8rem;
  line-height: 8rem;
  vertical-align: middle;

  //font-family: "Montserrat", sans-serif;
  font-size: 2.6rem;
  font-weight: 700;
  color: white;
  text-transform: uppercase;
  letter-spacing: -1px;

  a {
    color: white;

    &:hover {
      color: white;
    }
  }
}

/* Header */
/* based on http://tympanus.net/Development/ArticleIntroEffects/index3.html */
/* Trigger Button */
/* Conent */
/* -------------------------- */
/* Sliced */
/* based on http://tympanus.net/Development/ArticleIntroEffects/index3.html
/* -------------------------- */
/* Delays */

.blog-menu .mobile-menu a {
  color: white;

  &:hover {
    color: white;
  }
}

.post-header {
  position: relative;
  margin: 0 auto;
  min-height: 56rem;
  width: 100%;

  .post-menu-header {
    width: 100%;
    height: 8rem;
    background-color: black;
    color: white;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 9999;

    .blog-logo {
      display: inline-block;
      max-height: 8rem;

      img {
        max-height: 8rem;
      }
    }
  }
}

.bg-img {
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-backface-visibility: hidden;

  img {
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    min-width: 100%;
    min-height: 100%;
    max-width: none;
  }
}

.post-title {
  z-index: 1000;
  margin: 0 auto;
  padding: 0 2em;
  text-align: center;
  position: absolute;
  width: 100%;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);

  &.background--light h1 {
    color: white;
  }

  &.background--dark h1 {
    color: white;
  }

  a {
    color: white;

    &:hover {
      color: $teal;
    }
  }

  h1 {
    color: white;
    font-weight: 800;
    font-size: 4rem;
    margin: 0 auto;
    line-height: 1.1;
    text-transform: uppercase;
  }
}

button.trigger {
  position: fixed;
  bottom: 4rem;
  left: 50%;
  z-index: 5000;
  display: block;
  margin-left: -8px;
  padding: 0;
  width: 1em;
  height: 1em;
  border: none;
  background: transparent;
  color: transparent;
  font-size: 2em;
  cursor: pointer;

  &.background--light::before,
  &.background--light span::before {
    color: white;
  }

  &.background--dark::before,
  &.background--dark span::before {
    color: white;
  }

  &:before {
    position: absolute;
    bottom: 100%;
    left: -200%;
    padding: 0.8em;
    width: 500%;
    color: white;
    content: attr(data-info);
    font-size: 1.8rem;
    text-transform: uppercase;
    -webkit-backface-visibility: hidden;
  }

  &:focus {
    outline: none;
  }

  span {
    position: relative;
    display: block;
    overflow: hidden;
    width: 100%;
    height: 100%;

    &:before {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      color: white;

      // chevron-down
      content: "\f123";
      text-transform: none;
      font-weight: normal;
      font-style: normal;
      font-variant: normal;
      line-height: 1;
      speak: none;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }
}

.post-container:not(.notrans) button.trigger {
  transition: opacity 0.3s 0.5s;
}

.post-container.modify:not(.notrans) button.trigger {
  //opacity: 0;
  pointer-events: none;
  transition-delay: 0s;
}

.post-content {
  margin: 0 auto;
  padding: 0;

  > div:not(.post-title) {
    margin: -25% auto 0;
    padding-left: 3rem;
    padding-right: 3rem;

    h1, h2, h3, h4, h5, h6, ul, ol, blockquote, pre, hr {
      max-width: 90rem;
      margin-left: auto;
      margin-right: auto;
    }

    h1, h2, h3, h4, h5, h6 {
      font-weight: bold;
    }

    ul, ol {
      padding-left: 2rem;
      font-size: 1.8rem;
    }

    a, code {
      color: $teal;
    }

    p {
      margin: 0 auto 2em auto;
      max-width: 90rem;
      font-size: 1.8rem;

      &:first-child {
        font-size: 2.2rem;
        font-weight: 300;
      }

      &.with-image {
        text-align: center;
        padding-top: 5rem;
        padding-bottom: 5rem;
        max-width: 120rem;
      }
    }
  }
}

.intro-effect-sliced {
  .bg-img:first-child {
    bottom: 50%;
  }

  .bg-img:last-child {
    top: 50%;
    position: fixed;
    z-index: 900;

    img {
      top: -100%;
    }
  }

  .post-title {
    transform: translateX(-50%) translateY(-50%) scale(0.7);
  }

  .post-header p {
    //opacity: 0;
    color: white;
  }

  .post-content > div {
    transform: translateY(200px);

    //opacity: 0;
 
  }

  &:not(.notrans) {
    .bg-img,
    .post-header h1,
    .post-title,
    .post-header p,
    .post-content > div {
      transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
      transition-duration: 0.5s;
    }

    .bg-img,
    .post-title {
      transition-property: transform;
    }

    .post-header h1 {
      transition-property: color;
    }

    .post-header p {
      transition-property: opacity;
    }

    .post-content > div {
      transition-property: transform, opacity;
    }
  }

  &.modify {
    .bg-img:first-child {
      transform: translateY(-100%);
    }

    .bg-img:last-child {
      transform: translateY(100%);
    }

    .post-title {
      transform: translateX(-50%) translateY(-50%) scale(1);
    }

    .post-header p {
      opacity: 1;
    }

    .post-header h1 {
      color: white;
    }

    .post-content > div {
      transform: translateY(0);
      opacity: 1;
    }

    &:not(.notrans) {
      .post-header h1,
      .post-title,
      .post-header p,
      .post-content > div {
        transition-timing-function: ease;
        transition-duration: 0.5s;
      }

      .post-title {
        transition-delay: 0.15s;
      }
    }
  }
}

.post-share {
  font-size: 3rem;
  padding: 0;
  padding-top: 6rem;
  padding-bottom: 6rem;
  border-top: 1px solid #f2f2f2;
  color: $teal;

  a {
    display: inline-block;
    margin: 0 1.5rem;
    color: $teal;
  }
}

.author-info {
  padding: 0;
  padding-top: 6rem;
  padding-bottom: 6rem;
  background: #f2f2f2;

  .post-author {
    padding-left: 3rem;
    padding-right: 3rem;
    text-align: center;

    .author-label {
      display: block;
      font-size: 1.6rem;
      color: gray;
      font-style: italic;
    }

    .author-website {
      font-size: 1.6rem;
    }

    h1 {
      margin: 0;
      padding: 0;
      font-weight: 700;
      text-transform: uppercase;
    }

    > p {
      font-size: 1.8rem;

      a {
        color: $teal;
      }
    }

    .post-author-avatar {
      width: 20rem;
      height: 20rem;
      border-radius: 50%;
      float: none;
      margin-right: 0;
      margin-bottom: 2rem;
    }
  }
}

.page-container {
  /* Page conent */
  .page-menu-header {
    width: 100%;
    height: 8rem;
    background-color: black;
    color: white;
    position: relative;
    z-index: 9999;

    .blog-logo {
      display: inline-block;
      max-height: 8rem;

      img {
        max-height: 8rem;
      }
    }
  }

  .page-title {
    margin: 0 auto;
    width: 100%;

    a {
      color: white;

      &:hover {
        color: $teal;
      }
    }

    h1 {
      color: white;
      font-weight: 800;
      font-size: 5rem;
      padding: 0;
      padding-top: 7rem;
      padding-bottom: 7rem;
      margin: 0 auto;
      line-height: 1.1;
      text-align: center;
      text-transform: uppercase;
    }
  }

  .page-content {
    margin: 0 auto;
    padding: 0 0 8rem;

    > div:not(.page-title) {
      margin: 0 auto;
      padding-left: 3rem;
      padding-right: 3rem;

      h1, h2, h3, h4, h5, h6, ul, ol, blockquote, pre, hr {
        max-width: 90rem;
        margin-left: auto;
        margin-right: auto;
      }

      h1, h2, h3, h4, h5, h6 {
        font-weight: bold;
      }

      ul, ol {
        padding-left: 2rem;
        font-size: 1.8rem;
      }

      a, code {
        color: $teal;
      }

      p {
        margin: 0 auto 2em auto;
        max-width: 90rem;
        font-size: 1.8rem;

        &:first-child {
          font-size: 2.2rem;
          font-weight: 300;
        }

        &.with-image {
          text-align: center;
          padding-top: 5rem;
          padding-bottom: 5rem;
          max-width: 120rem;
        }
      }
    }
  }
}

.post-template,
.page-template {
  .row {
    max-width: 93rem;
    margin-left: -1.5rem;
    margin-right: -1.5rem;
  }

  p {
    margin: 0 auto 2em auto !important;
    max-width: 90rem !important;
    font-size: 1.8rem !important;
  }
}

::selection {
  background: $teal;
  color: #fff;
}

::-moz-selection {
  background: $teal;
  color: #fff;
}

pre {
  word-wrap: break-word;
  margin-bottom: 2.5rem;
}

code {
  font-size: 1.5rem;
  line-height: 1.2;
}

iframe {
  border: 0;
}

.flex-video {
  margin-left: auto;
  margin-right: auto;
  max-width: 120rem;
}

.disqus {
  padding: 0;
  padding-top: 6rem;
  padding-bottom: 9rem;
  padding-left: 3rem;
  padding-right: 3rem;

  .comments-header {
    font-weight: 700;
    text-transform: uppercase;
  }
}

.post-list {
  padding: 0;
  margin: 0;
  list-style-type: none;

  li {
    padding: 8px 0;
    border-bottom: 1px solid #ccc;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    zoom: 1;

    &:after, &:before {
      display: table;
      line-height: 0;
      content: "";
    }

    &:after {
      clear: both;
    }
  }

  a > span {
    float: right;
  }

  .entry-date {
    display: none;
    font-size: 1.4rem;
    text-transform: uppercase;
  }
}

.tag-box {
  padding: 4px 0;
  margin: 0;
  overflow: hidden;
  list-style: none;
  zoom: 1;

  &:after, &:before {
    display: table;
    line-height: 0;
    content: "";
  }

  &:after {
    clear: both;
  }

  &.inline li {
    float: left;
    font-size: 1.4rem;
    line-height: 2.5;
  }

  a {
    padding: 4px 6px;
    margin: 2px;
    text-decoration: none;
    border: 1px solid white;
    border-radius: 4px;

    span {
      font-size: 10px;
      vertical-align: super;
      color: white;
    }
  }
}

